# uvdar_leader_follower

./: CMakeLists.txt  README.md  package.xml
cfg/: Follower.cfg
config/: follower.yaml  leader.yaml  leader_follower_pj.xml
include/uvdar_leader_follower/: follower.h  message_utils.h  util.h  velocity_estimator.h
launch/: follower.launch  load_leader_trajectory.launch  rviz.launch  single_frequency_uvdar.launch  single_frequency_uvdar_rw.launch
rviz/: example.rviz
scripts/: generate_trajectory.py
src/: follower.cpp  message_utils.cpp  velocity_estimator.cpp
tmux_scripts/follower_rw/: tmux.sh
tmux_scripts/leader_rw/: tmux.sh
tmux_scripts/simulation_two_drones/: layout.json  pos1.yaml  pos2.yaml  session.yml
trajectories/: leader_complex_1.0ms.txt  leader_complex_2.0ms.txt  leader_complex_3.0ms.txt  leader_eight_1.0ms.txt  leader_eight_1.5ms.txt  leader_eight_2.0ms.txt  leader_eight_3.0ms.txt
